--- a/config.yaml
+++ b/config.yaml
@@ -49,7 +49,9 @@ params:
   description: >
     A website built through Hugo and blogdown with the hugo-prose theme.
   footer: >
-    &copy; 版权所有
+    &copy; 版权所有，转载请注明出处和作者。<br> 
+    致谢：本站采用 [Hugo](https://gohugo.io/) 框架、[Prose](https://prose.yihui.org/about/) 主题、[R blogdown](https://bookdown.org/yihui/blogdown/) 包搭建，[GitHub](https://bookdown.org/yihui/blogdown/) 和 [Vercel](https://vercel.com/) 托管。
+    
   license: >
     本文文字和图表使用知识共享许可协议 [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)，[源文件](https://github.com/pzhaonet/msg2020)采用 MIT 协议。。
 #    Text and figures are licensed under [Creative Commons Attribution CC BY
