--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ defaultContentLanguage: "zh"
 title: "现代统计图形"
 theme: "hugo-prose"
 publishdir: "docs"
-googleAnalytics: ""
+googleAnalytics: "UA-192936648-1"
 disqusShortname: ""
 ignoreFiles: ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
 footnotereturnlinkcontents: "↩"
